--- a/src/app/modules/budget-tracker/modules/dashboard/modules/info-cards/components/info-cards/balance-info-card/balance-info-card.component.html
+++ b/src/app/modules/budget-tracker/modules/dashboard/modules/info-cards/components/info-cards/balance-info-card/balance-info-card.component.html
@@ -6,6 +6,10 @@
   [secondaryText]="buildTranslationKey('currentBalance') | translate"
   [additionalPrimaryText]="fullBalance$ | async | currencySymbol"
   [additionalSecondaryText]="buildTranslationKey('fullBalance') | translate"
-  [menuActions]="menuActions$ | async"
-  [shouldDisplayMenu]="true"
+  [menuActions]="menuActions"
+  [tooltip]="tooltip"
 ></app-info-card>
+
+<ng-template #tooltip>
+  <span [innerHTML]="buildTranslationKey('tooltip') | translate"></span>
+</ng-template>
