--- a/src/app/modules/budget-tracker/modules/dashboard/modules/info-cards/components/info-cards/free-money-info-card/free-money-info-card.component.html
+++ b/src/app/modules/budget-tracker/modules/dashboard/modules/info-cards/components/info-cards/free-money-info-card/free-money-info-card.component.html
@@ -3,6 +3,5 @@
   [colorScheme]="'charcoal'"
   [primaryText]="freeMoney$ | async | currencySymbol"
   [secondaryText]="buildTranslationKey('title') | translate"
-  [shouldDisplayMenu]="true"
-  [menuActions]="menuActions$ | async"
+  [menuActions]="menuActions"
 ></app-info-card>
