--- a/src/app/modules/design-system/components/generic-activity-log-record/generic-activity-log-record.component.html
+++ b/src/app/modules/design-system/components/generic-activity-log-record/generic-activity-log-record.component.html
@@ -6,6 +6,6 @@
   </span>
   <div class="flex items-center gap-x-1">
     <span class="font-main text-grey text-xs">{{ time }}</span>
-    <app-info-icon *ngIf="note" [text]="note"></app-info-icon>
+    <app-info-icon *ngIf="note" [tooltip]="note"></app-info-icon>
   </div>
 </div>
