--- a/src/app/modules/budget-tracker/modules/dashboard/modules/info-cards/components/info-cards/income-info-card/income-info-card.component.html
+++ b/src/app/modules/budget-tracker/modules/dashboard/modules/info-cards/components/info-cards/income-info-card/income-info-card.component.html
@@ -5,5 +5,5 @@
   [primaryText]="income$ | async | currencySymbol"
   [secondaryText]="buildTranslationKey('title') | translate"
   [menuActions]="menuActions"
-  [shouldDisplayMenu]="shouldDisplayMenu$ | async"
+  [shouldDisableMenu]="shouldDisableMenu$ | async"
 ></app-info-card>
