--- a/src/app/modules/budget-tracker/modules/dashboard/modules/info-cards/components/info-cards/savings-info-card/savings-info-card.component.html
+++ b/src/app/modules/budget-tracker/modules/dashboard/modules/info-cards/components/info-cards/savings-info-card/savings-info-card.component.html
@@ -4,6 +4,5 @@
   [colorScheme]="'green'"
   [primaryText]="savings$ | async | currencySymbol"
   [secondaryText]="buildTranslationKey('title') | translate"
-  [shouldDisplayMenu]="true"
-  [menuActions]="menuActions$ | async"
+  [menuActions]="menuActions"
 ></app-info-card>
