--- a/src/app/modules/design-system/components/button/button.component.scss
+++ b/src/app/modules/design-system/components/button/button.component.scss
@@ -6,6 +6,10 @@
     @apply cursor-default pointer-events-none;
   }
 
+  transition-duration: 0.1s;
+  transition-timing-function: ease-in-out;
+  transition-property: background-color, color;
+
   // SIZES X
   &.small-x {
     @apply w-8;
