--- a/src/app/modules/design-system/components/info-card/info-card.component.html
+++ b/src/app/modules/design-system/components/info-card/info-card.component.html
@@ -1,9 +1,17 @@
-<app-menu
-  *ngIf="shouldDisplayMenu && menuActions?.length"
-  class="absolute right-2 top-2"
-  [colorScheme]="menuColorScheme"
-  [menuActions]="menuActions"
-></app-menu>
+<div class="absolute right-2 top-2 flex flex-col gap-1 items-center">
+  <app-menu
+    [colorScheme]="menuColorScheme"
+    [menuActions]="menuActions"
+    [menuDisabled]="shouldDisableMenu || !menuActions?.length"
+  ></app-menu>
+
+  <app-info-icon
+    *ngIf="tooltip"
+    [size]="'medium'"
+    [tooltipPosition]="isMobile ? 'left' : 'top'"
+    [tooltip]="tooltip"
+  ></app-info-icon>
+</div>
 
 <svg-icon-with-bg class="{{ iconBGClass }} {{ iconColorClass }}" [iconName]="iconName"></svg-icon-with-bg>
 
