--- a/src/app/modules/design-system/components/info-icon/info-icon.component.html
+++ b/src/app/modules/design-system/components/info-icon/info-icon.component.html
@@ -1,7 +1,9 @@
 <svg-icon
   customTooltip
   class="text-charcoal hover:text-blue cursor-pointer"
-  [tooltipText]="text"
+  [position]="tooltipPosition"
+  [tooltipText]="stringTooltip"
+  [tooltipTemplate]="templateTooltip"
   [iconName]="'info'"
   [size]="size"
 ></svg-icon>
