--- a/src/app/modules/budget-tracker/modules/dashboard/modules/categories/components/categories/categories.component.html
+++ b/src/app/modules/budget-tracker/modules/dashboard/modules/categories/components/categories/categories.component.html
@@ -5,7 +5,7 @@
     areAllCategoriesReset: areAllCategoriesReset$ | async
   } as data"
   class="flex flex-col gap-y-4 w-full h-full justify-between"
->
+  >
   <app-page-header class="text-xl bg-transparent" [title]="title | translate">
     <div class="flex items-center gap-x-2">
       <app-button
@@ -41,28 +41,32 @@
     </div>
   </app-page-header>
 
-  <span
-    *ngIf="data.isEmpty"
-    class="font-main font-bold text-charcoal text-lg text-center flex flex-1 flex-col justify-center items-center"
-  >
-    {{ buildTranslationKey('emptyStateText') | translate }}
-  </span>
+  @if (data.isEmpty) {
+    <span
+      class="font-main font-bold text-charcoal text-lg text-center flex flex-1 flex-col justify-center items-center"
+      >
+      {{ buildTranslationKey('emptyStateText') | translate }}
+    </span>
+  }
 
-  <ng-container *ngIf="!data.isEmpty">
-    <ng-container [ngSwitch]="data.currentTab">
-      <cdk-virtual-scroll-viewport *ngSwitchCase="'list'" itemSize="60" class="h-full">
-        <div
-          *cdkVirtualFor="let category of categories$ | async; trackBy: trackBy.bind(this); templateCacheSize: 0"
-          class="h-15 flex items-center"
-        >
-          <app-category-item class="w-full" [categoryId]="category.id"></app-category-item>
+  @if (!data.isEmpty) {
+    @switch (data.currentTab) {
+      @case ('list') {
+        <cdk-virtual-scroll-viewport itemSize="60" class="h-full">
+          <div
+            *cdkVirtualFor="let category of categories$ | async; trackBy: trackBy.bind(this); templateCacheSize: 0"
+            class="h-15 flex items-center"
+            >
+            <app-category-item class="w-full" [categoryId]="category.id"></app-category-item>
+          </div>
+        </cdk-virtual-scroll-viewport>
+      }
+      @case ('chart') {
+        <div class="w-full h-full flex flex-1 items-center justify-center overflow-hidden">
+          <canvas baseChart class="h-full" [type]="'doughnut'" [data]="chartData$ | async" [options]="chartOptions">
+          </canvas>
         </div>
-      </cdk-virtual-scroll-viewport>
-
-      <div *ngSwitchCase="'chart'" class="w-full h-full flex flex-1 items-center justify-center overflow-hidden">
-        <canvas baseChart class="h-full" [type]="'doughnut'" [data]="chartData$ | async" [options]="chartOptions">
-        </canvas>
-      </div>
-    </ng-container>
-  </ng-container>
+      }
+    }
+  }
 </div>
