--- a/src/app/modules/budget-tracker/modules/dashboard/modules/info-cards/components/info-card-value-modal/info-card-value-modal.component.html
+++ b/src/app/modules/budget-tracker/modules/dashboard/modules/info-cards/components/info-card-value-modal/info-card-value-modal.component.html
@@ -5,22 +5,32 @@
       <mat-label>{{ title | translate }}</mat-label>
       <input #valueInput matInput [formControlName]="formFields.Value" [type]="'number'" />
 
-      <mat-error *ngIf="hasRequiredError">{{ 'formErrors.required' | translate }}</mat-error>
+      @if (hasRequiredError) {
+        <mat-error>{{ 'formErrors.required' | translate }}</mat-error>
+      }
 
-      <mat-error *ngIf="hasMinValueError">{{ 'formErrors.minValue' | translate : { minValue: 1 } }}</mat-error>
+      @if (hasMinValueError) {
+        <mat-error>{{ 'formErrors.minValue' | translate : { minValue: 1 } }}</mat-error>
+      }
 
-      <mat-error *ngIf="hasMaxValueError">
-        {{ 'formErrors.maxValue' | translate : { maxValue: initialValue } }}
-      </mat-error>
+      @if (hasMaxValueError) {
+        <mat-error>
+          {{ 'formErrors.maxValue' | translate : { maxValue: initialValue } }}
+        </mat-error>
+      }
 
-      <mat-error *ngIf="hasEditError">{{ 'formErrors.editError' | translate }}</mat-error>
+      @if (hasEditError) {
+        <mat-error>{{ 'formErrors.editError' | translate }}</mat-error>
+      }
     </mat-form-field>
 
     <mat-form-field>
       <mat-label>{{ buildTranslationKey('noteInputTitle') | translate }}</mat-label>
       <textarea matInput rows="3" [formControlName]="formFields.Note"></textarea>
 
-      <mat-error *ngIf="hasMaxLengthError">{{ 'formErrors.noteTooLong' | translate }}</mat-error>
+      @if (hasMaxLengthError) {
+        <mat-error>{{ 'formErrors.noteTooLong' | translate }}</mat-error>
+      }
     </mat-form-field>
   </form>
 </div>
