--- a/src/app/modules/design-system/components/button/button.component.html
+++ b/src/app/modules/design-system/components/button/button.component.html
@@ -10,14 +10,18 @@
   [showTooltipOnlyOnOverflow]="true"
   [childElementId]="'buttonText'"
   [type]="'button'"
->
-  <app-loader *ngIf="loading; else main"></app-loader>
+  >
+  @if (loading) {
+    <app-loader></app-loader>
+  } @else {
+    @if (iconName) {
+      <svg-icon class="w-6 h-6" [iconName]="iconName" [class.grayscale]="disabled"></svg-icon>
+    }
+    @if (text) {
+      <span id="buttonText" class="inline-block font-main text-base truncate">
+        {{ text }}
+      </span>
+    }
+  }
 
-  <ng-template #main>
-    <svg-icon *ngIf="iconName" class="w-6 h-6" [iconName]="iconName" [class.grayscale]="disabled"></svg-icon>
-
-    <span id="buttonText" *ngIf="text" class="inline-block font-main text-base truncate">
-      {{ text }}
-    </span>
-  </ng-template>
 </button>
