--- a/src/app/modules/budget-tracker/modules/dashboard/modules/categories/components/category-value-modal/category-value-modal.component.html
+++ b/src/app/modules/budget-tracker/modules/dashboard/modules/categories/components/category-value-modal/category-value-modal.component.html
@@ -9,16 +9,22 @@
       <mat-label>{{ buildTranslationKey('valueToAddTitle') | translate }}</mat-label>
       <input #valueInput matInput [type]="'number'" [formControlName]="formFieldsEnum.ValueToAdd" />
 
-      <mat-error *ngIf="hasRequiredError">{{ 'formErrors.required' | translate }}</mat-error>
+      @if (hasRequiredError) {
+        <mat-error>{{ 'formErrors.required' | translate }}</mat-error>
+      }
 
-      <mat-error *ngIf="hasMinValueError">{{ 'formErrors.minValue' | translate : { minValue: 1 } }}</mat-error>
+      @if (hasMinValueError) {
+        <mat-error>{{ 'formErrors.minValue' | translate : { minValue: 1 } }}</mat-error>
+      }
     </mat-form-field>
 
     <mat-form-field>
       <mat-label>{{ buildTranslationKey('noteTitle') | translate }}</mat-label>
       <textarea matInput rows="3" [formControlName]="formFieldsEnum.Note"></textarea>
 
-      <mat-error *ngIf="hasMaxLengthError">{{ 'formErrors.noteTooLong' | translate }}</mat-error>
+      @if (hasMaxLengthError) {
+        <mat-error>{{ 'formErrors.noteTooLong' | translate }}</mat-error>
+      }
     </mat-form-field>
   </form>
 </div>
