--- a/src/app/modules/budget-tracker/modules/statistics/components/monthly-statistics/monthly-statistics.component.html
+++ b/src/app/modules/budget-tracker/modules/statistics/components/monthly-statistics/monthly-statistics.component.html
@@ -5,15 +5,16 @@
 </div>
 
 <div class="flex justify-center gap-2">
-  <app-button
-    *ngFor="let action of zoomOptions"
-    customTooltip
-    [tooltipText]="action.tooltipKey | translate"
-    [position]="'top'"
-    [dontDisplayOnScreenWidth]="true"
-    [colorScheme]="'charcoal'"
-    [iconName]="action.icon"
-    [buttonSizeY]="'small'"
-    (click)="action.handler()"
-  ></app-button>
+  @for (action of zoomOptions; track action) {
+    <app-button
+      customTooltip
+      [tooltipText]="action.tooltipKey | translate"
+      [position]="'top'"
+      [dontDisplayOnScreenWidth]="true"
+      [colorScheme]="'charcoal'"
+      [iconName]="action.icon"
+      [buttonSizeY]="'small'"
+      (click)="action.handler()"
+    ></app-button>
+  }
 </div>
