--- a/src/app/modules/budget-tracker/budget-tracker.component.html
+++ b/src/app/modules/budget-tracker/budget-tracker.component.html
@@ -11,3 +11,5 @@
 <div class="animated-route main p-6 w-full bg-dirty-white">
   <router-outlet></router-outlet>
 </div>
+
+<app-lost-connection-message></app-lost-connection-message>
