--- a/src/app/modules/budget-tracker/budget-tracker.component.html
+++ b/src/app/modules/budget-tracker/budget-tracker.component.html
@@ -8,8 +8,10 @@
   </div>
 }
 
+
 <div class="animated-route main p-6 w-full bg-dirty-white">
   <router-outlet></router-outlet>
 </div>
-
-<app-lost-connection-message></app-lost-connection-message>
+@if ((isOnline$ | async) === false)  {
+  <app-lost-connection-message></app-lost-connection-message>
+}
