Button click callback

--- a/src/app/modules/shared/components/lost-connection-message/lost-connection-message.component.html
+++ b/src/app/modules/shared/components/lost-connection-message/lost-connection-message.component.html
@@ -8,6 +8,7 @@
     [colorScheme]="'green'"
     [text]="buildTranslationKey('button') | translate"
     [iconName]="'reload'"
+    (click)="reload()"
   >
   </app-button>
 </div>
