AL remove func-ty

--- a/src/app/modules/budget-tracker/modules/dashboard/modules/activity-log/components/categories-reset-record/categories-reset-record.component.html
+++ b/src/app/modules/budget-tracker/modules/dashboard/modules/activity-log/components/categories-reset-record/categories-reset-record.component.html
@@ -1,4 +1,9 @@
-<app-generic-activity-log-record [icon]="record.icon" [date]="record.date">
+<app-generic-activity-log-record
+  [icon]="record.icon"
+  [date]="record.date"
+  [loading]="isRecordRemoving$ | async"
+  (remove)="removeRecord()"
+>
   <span class="font-main text-charcoal text-base" [innerHTML]="buildTranslationKey(record.budgetType) | translate">
   </span>
 </app-generic-activity-log-record>
