--- a/src/app/modules/design-system/components/button/button.component.scss
+++ b/src/app/modules/design-system/components/button/button.component.scss
@@ -11,6 +11,10 @@
   transition-property: background-color, color;
 
   // SIZES X
+  &.tiny-x {
+    @apply w-7;
+  }
+
   &.small-x {
     @apply w-8;
   }
