--- a/src/app/modules/design-system/components/generic-activity-log-record/generic-activity-log-record.component.html
+++ b/src/app/modules/design-system/components/generic-activity-log-record/generic-activity-log-record.component.html
@@ -6,8 +6,24 @@
   </span>
   <div class="flex items-center gap-x-1">
     <span class="font-main text-grey text-xs">{{ time }}</span>
+
     @if (note) {
       <app-info-icon [tooltip]="note"></app-info-icon>
     }
   </div>
 </div>
+
+<app-button
+  [iconName]="'close'"
+  [colorScheme]="'transparent-dark'"
+  [buttonSizeY]="'tiny'"
+  [buttonSizeX]="'tiny'"
+  [disabled]="loading"
+  (click)="removeButtonClick()"
+></app-button>
+
+@if (loading) {
+  <div class="absolute top-0 left-0 w-full h-full flex justify-center items-center bg-hover-black z-50 rounded">
+    <app-loader [colorMode]="'dark'"></app-loader>
+  </div>
+}
