--- a/src/app/modules/budget-tracker/modules/dashboard/modules/activity-log/components/root-value-change-record/root-value-change-record.component.html
+++ b/src/app/modules/budget-tracker/modules/dashboard/modules/activity-log/components/root-value-change-record/root-value-change-record.component.html
@@ -1,4 +1,10 @@
-<app-generic-activity-log-record [icon]="record.icon" [date]="record.date" [note]="record?.note">
+<app-generic-activity-log-record
+  [icon]="record.icon"
+  [date]="record.date"
+  [note]="record?.note"
+  [loading]="this.isRecordRemoving$ | async"
+  (remove)="removeHandler()"
+>
   <span class="flex justify-between flex-wrap">
     <span class="font-main text-charcoal text-base">
       {{ buildTranslationKey('title.' + record.valueType) | translate }}
@@ -6,14 +12,10 @@
 
     @switch (record.actionType) {
       @case (actionType.Increase) {
-        <span class="font-main font-bold text-dark-green">
-          &plus;&nbsp;{{ record.value | currencySymbol }}
-        </span>
+        <span class="font-main font-bold text-dark-green"> &plus;&nbsp;{{ record.value | currencySymbol }} </span>
       }
       @case (actionType.Decrease) {
-        <span class="font-main font-bold text-red">
-          &minus;&nbsp;{{ record.value | currencySymbol }}
-        </span>
+        <span class="font-main font-bold text-red"> &minus;&nbsp;{{ record.value | currencySymbol }} </span>
       }
       @case (actionType.Edit) {
         <span class="font-main font-bold text-blue">
