--- a/src/styles.scss
+++ b/src/styles.scss
@@ -172,6 +172,36 @@ textarea {
   @apply p-0 #{!important};
 }
 
+// MAT CHECKBOX
+.mat-mdc-checkbox {
+  .mdc-checkbox {
+    .mdc-checkbox__background {
+      @apply border-grey #{!important};
+    }
+
+    .mdc-checkbox__ripple {
+      @apply hidden #{!important};
+    }
+
+    .mdc-checkbox__native-control:enabled:checked ~ .mdc-checkbox__background {
+      @apply border-dark-green bg-dark-green #{!important};
+    }
+
+    &:hover {
+      @media (hover: hover) {
+        .mdc-checkbox__native-control:enabled:not(:checked):not(:indeterminate):not([data-indeterminate='true'])
+          ~ .mdc-checkbox__background {
+          @apply border-charcoal #{!important};
+        }
+      }
+    }
+  }
+
+  .mdc-label {
+    @apply font-main #{!important};
+  }
+}
+
 // SCROLLER
 .cdk-virtual-scroll-content-wrapper {
   @apply w-full #{!important};
