--- a/src/app/modules/budget-tracker/modules/dashboard/modules/categories/components/category-value-modal/category-value-modal.component.html
+++ b/src/app/modules/budget-tracker/modules/dashboard/modules/categories/components/category-value-modal/category-value-modal.component.html
@@ -38,7 +38,7 @@
   ></app-button>
 
   <app-button
-    [buttonSizeX]="'medium'"
+    [buttonSizeX]="'px100'"
     [colorScheme]="'charcoal'"
     [text]="buildTranslationKey('add') | translate"
     [loading]="loading$ | async"
