--- a/src/app/modules/design-system/components/info-icon/info-icon.component.html
+++ b/src/app/modules/design-system/components/info-icon/info-icon.component.html
@@ -1,9 +1,9 @@
 <svg-icon
   customTooltip
-  class="text-charcoal hover:text-blue cursor-pointer"
+  class="{{ colorClasses }} cursor-pointer"
   [position]="tooltipPosition"
   [tooltipText]="stringTooltip"
   [tooltipTemplate]="templateTooltip"
-  [iconName]="'info'"
+  [iconName]="icon"
   [size]="size"
 ></svg-icon>
