--- a/src/app/modules/design-system/components/button/button.component.scss
+++ b/src/app/modules/design-system/components/button/button.component.scss
@@ -6,9 +6,11 @@
     @apply cursor-default pointer-events-none;
   }
 
-  transition-duration: 0.1s;
-  transition-timing-function: ease-in-out;
-  transition-property: background-color, color;
+  @media (hover: hover) {
+    transition-duration: 0.1s;
+    transition-timing-function: linear;
+    transition-property: background-color, color;
+  }
 
   // SIZES X
   &.tiny-x {
@@ -20,7 +22,11 @@
   }
 
   &.medium-x {
-    @apply w-24;
+    @apply w-9;
+  }
+
+  &.px100-x {
+    @apply w-25;
   }
 
   &.big-x {
